--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <h1>Weather App</h1>
         <div class="weather-input">
             <input type="text" id="cityInput" placeholder="Enter city name">
-            <button id="getWeatherBtn">Get Weather</button>
+            
         </div>
+        <div class="button"><button id="getWeatherBtn">Get Weather</button></div>
         <div class="weather-info">
             <div id="weatherIcon"></div>
             <div id="temperature"></div>
