--- a/index.html
+++ b/index.html
@@ -1,26 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Запись на шиномонтаж</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .container {
+            width: 90%;
+            max-width: 800px;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            margin: 20px 0;
+        }
+        .container > h1{
+            text-align: center;
+        }
+        .image {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        .form-group input,
+        .form-group select {
+            width: 90%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .form-group button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .form-group button:hover {
+            background-color: #0056b3;
+        }
+        @media (max-width: 480px) {
+            .container,
+            .form-group input,
+            .form-group select,
+            .form-group button {
+                max-width: 320px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Weather App</h1>
-        <div class="weather-input">
-            <input type="text" id="cityInput" placeholder="Enter city name">
-            
-        </div>
-        <div class="button"><button id="getWeatherBtn">Get Weather</button></div>
-        <div class="weather-info">
-            <div id="weatherIcon"></div>
-            <div id="temperature"></div>
-            <div id="description"></div>
-            <div id="cityName"></div>
-        </div>
+        <img src="shinomontaj.png" alt="Шиномонтаж" class="image">
+        <h1>Запись на шиномонтаж</h1>
+        <form id="appointmentForm">
+            <div class="form-group">
+                <label for="name">Ваше имя:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Телефон:</label>
+                <input type="tel" id="phone" name="phone" required>
+            </div>
+            <div class="form-group">
+                <label for="date">Дата:</label>
+                <input type="date" id="date" name="date" required>
+            </div>
+            <div class="form-group">
+                <label for="time">Время:</label>
+                <select id="time" name="time" required>
+                    <option value="10:00">10:00</option>
+                    <option value="12:00">12:00</option>
+                    <option value="14:00">14:00</option>
+                    <option value="16:00">16:00</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <button type="submit">Записаться</button>
+            </div>
+        </form>
     </div>
-    <script src="script.js"></script>
+    <script>
+        document.getElementById('appointmentForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            alert('Вы успешно записаны!');
+        });
+    </script>
 </body>
 </html>
